# discretize

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.html  genindex.html  index.html  meson.build  meson_options.txt  noxfile.py  objects.inv  scripts.html  search.html  searchindex.js  tutorial.html
.doctrees/: build.doctree  environment.pickle  index.doctree  scripts.doctree  tutorial.doctree
.doctrees/yosys_passes/: index.doctree  synth_discretize.doctree  write_kicad.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
backend/: Makefile.inc  write_kicad.cc
contrib/: .flake8  .gitignore  celllib.kicad_sch
docs/: build.md  conf.py  index.md  requirements.txt  scripts.md  tutorial.md
docs/yosys_passes/: index.md  synth_discretize.md  write_kicad.md
src/: config.hh.in  meson.build
src/backend/: meson.build  write_kicad.cc
src/techlib/: cells_dffe.v  cells_mux.v  meson.build  synth_discretize.cc
techlib/: .gitignore  Makefile.inc  cells_dffe.v  cells_map.v  cells_mod.v  discretize.lib  synth_discretize.cc  synth_discretize.ys
tests/: .gitignore  counter.v  inverter.v  meson.build
yosys_passes/: index.html  synth_discretize.html  write_kicad.html
